# ctypesgen

./: .gitignore  CHANGELOG.md  CONTRIBUTING  README.md  justfile  pyproject.toml  setup.cfg  setup.py  test_includes.py  tox.ini
.github/workflows/: black.yml  flake8.yml  publish.yml  test.yml
ctypesgen/: __init__.py  __main__.py  ctypedescs.py  descriptions.py  expressions.py  includes.py  libraryloader.py  options.py  page_per_header.py
ctypesgen/parser/: cdeclarations.py  cgrammar.py  cparser.py  ctypesparser.py  datacollectingparser.py  preprocessor.py
ctypesgen/printer_json/: printer.py
ctypesgen/printer_python/: preamble.py  printer.py
ctypesgen/processor/: dependencies.py  operations.py  pipeline.py
demo/: README.md  demoapp.c  demoapp.py  demolib.c  demolib.h  pydemolib.py
docs/: CHANGELOG.md  TODO_geisserml.md  TODO_geisserml.txt  dev_comments.md  pcpp.md  python_api.md
docs/demo/: .gitignore  README.md  demoapp.c  demoapp.py  demolib.c  libdemo.c  pydemolib.py
src/ctypesgen/: __init__.py  __main__.py  ctypedescs.py  descriptions.py  expressions.py  libraryloader.py  messages.py  printer_json.py  printer_python.py  templates.py  version.py
src/ctypesgen/parser/: __init__.py  cdeclarations.py  cgrammar.py  cparser.py  ctypesparser.py  datacollectingparser.py  parsetab.py  pplexer.py  preprocessor.py
src/ctypesgen/printer_python/: preamble.py  printer.py
src/ctypesgen/processor/: __init__.py  dependencies.py  operations.py  pipeline.py
tests/: conftest.py  ctypesgentest.py  json_expects.py  multitest.sh  string_template.py  testsuite.py
