[build-system]
requires = ["setuptools>=64", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ctypesgen"
description = "Python wrapper generator for ctypes"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]
dynamic = ["readme", "version", "license"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ctypesgen/ctypesgen"
Repository = "https://github.com/ctypesgen/ctypesgen.git"
Issues = "https://github.com/ctypesgen/ctypesgen/issues"
Changelog = "https://github.com/ctypesgen/ctypesgen/blob/master/CHANGELOG.md"

[project.scripts]
ctypesgen = "ctypesgen.__main__:main"

[tool.setuptools]
package-dir = {}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ctypesgen", "ctypesgen.*"]
namespaces = false

[tool.setuptools.dynamic.readme]
file = ["README.md", "LICENSE", "docs/CHANGELOG.md"]
content-type = "text/markdown"

[tool.setuptools_scm]
write_to = "src/ctypesgen/VERSION"
write_to_template = "{version}"
